# HyperSPI

./: .gitmodules  3RD_PARTY_LICENSES.txt  README.md  extra_script.py  platformio.ini
.github/workflows/: push-master-pico.yml  push-master.yml
esp32/HyperSPI_esp32_Neopixel/: HyperSPI_esp32_Neopixel.ino
esp32/HyperSPI_esp32_SK6812ColdWhite/: HyperSPI_esp32_SK6812ColdWhite.ino
esp32/HyperSPI_esp32_SK6812NeutralWhite/: HyperSPI_esp32_SK6812NeutralWhite.ino
esp32/HyperSPI_esp32_SPI_leds/: HyperSPI_esp32_SPI_leds.ino
esp8266/HyperSPI_esp8266_Neopixel/: HyperSPI_esp8266_Neopixel.ino
esp8266/HyperSPI_esp8266_SK6812ColdWhite/: HyperSPI_esp8266_SK6812ColdWhite.ino
esp8266/HyperSPI_esp8266_SK6812NeutralWhite/: HyperSPI_esp8266_SK6812NeutralWhite.ino
include/: base.h  calibration.h  framestate.h  main.h  statistics.h
rp2040/: .gitignore  CMakeLists.txt  hyperspi.cpp
src/: main.cpp
test/test_MultiSegment/: main.cpp
test/test_MultiSegmentReversed/: main.cpp
test/test_SingleSegment/: main.cpp
